--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
 
        // IMPORTANT: These global variables are provided by the environment
        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyApkQJrJHsSRjd9tC2x21EdN_2IqWYKRxQ",
   authDomain: "wementor-app-cfce5.firebaseapp.com",
@@ -116,7 +124,12 @@ const firebaseConfig = {
   messagingSenderId: "31838724730",
   appId: "1:31838724730:web:3184b080194938a11751c3",
   measurementId: "G-5WRHES5F65"
-};       const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);    
+      const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
 
        // --- Firebase Initialization ---
@@ -698,3 +711,4 @@ const firebaseConfig = {
 </body>
 
 </html>
+
