--- a/index.html
+++ b/index.html
@@ -113,8 +113,29 @@
 
         // These global variables are provided by the immersive environment.
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-        const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : null;
-        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyApkQJrJHsSRjd9tC2x21EdN_2IqWYKRxQ",
+    authDomain: "wementor-app-cfce5.firebaseapp.com",
+    projectId: "wementor-app-cfce5",
+    storageBucket: "wementor-app-cfce5.firebasestorage.app",
+    messagingSenderId: "31838724730",
+    appId: "1:31838724730:web:3184b080194938a11751c3",
+    measurementId: "G-5WRHES5F65"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
         let app;
         let auth;
@@ -334,3 +355,4 @@
     </script>
 </body>
 </html>
+
