--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
         // IMPORTANT: Replace this with your own Firebase configuration object.
         // You can get this from your Firebase project settings in the console.
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+    apiKey: "AIzaSyApkQJrJHsSRjd9tC2x21EdN_2IqWYKRxQ",
+    authDomain: "wementor-app-cfce5.firebaseapp.com",
+    projectId: "wementor-app-cfce5",
+    storageBucket: "wementor-app-cfce5.firebasestorage.app",
+    messagingSenderId: "31838724730",
+    appId: "1:31838724730:web:3184b080194938a11751c3",
+    measurementId: "G-5WRHES5F65"
+  };
         
         let app;
         let auth;
@@ -341,3 +342,4 @@
     </script>
 </body>
 </html>
+
