--- a/index.html
+++ b/index.html
@@ -103,17 +103,16 @@
     </div>
 
     <!-- Firebase SDK Imports -->
-    <script type="module">
-        import { initializeApp, setLogLevel } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, onSnapshot, collection, query } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+   <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Set Firebase log level for debugging purposes.
-        setLogLevel('debug');
-
-        // IMPORTANT: Replace this with your own Firebase configuration object.
-        // You can get this from your Firebase project settings in the console.
-        const firebaseConfig = {
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
     apiKey: "AIzaSyApkQJrJHsSRjd9tC2x21EdN_2IqWYKRxQ",
     authDomain: "wementor-app-cfce5.firebaseapp.com",
     projectId: "wementor-app-cfce5",
@@ -122,6 +121,11 @@
     appId: "1:31838724730:web:3184b080194938a11751c3",
     measurementId: "G-5WRHES5F65"
   };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
         
         let app;
         let auth;
@@ -342,4 +346,5 @@
     </script>
 </body>
 </html>
+
 
