--- a/index.html
+++ b/index.html
@@ -102,30 +102,25 @@
         </div>
     </div>
 
-    <!-- Firebase SDK Imports -->
-   <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+    <!-- Firebase SDK and Application Logic -->
+    <script type="module">
+        import { initializeApp, setLogLevel } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
+        import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
+        import { getFirestore, doc, setDoc, onSnapshot, collection, query } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyApkQJrJHsSRjd9tC2x21EdN_2IqWYKRxQ",
-    authDomain: "wementor-app-cfce5.firebaseapp.com",
-    projectId: "wementor-app-cfce5",
-    storageBucket: "wementor-app-cfce5.firebasestorage.app",
-    messagingSenderId: "31838724730",
-    appId: "1:31838724730:web:3184b080194938a11751c3",
-    measurementId: "G-5WRHES5F65"
-  };
+        // Set Firebase log level for debugging purposes.
+        setLogLevel('debug');
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyApkQJrJHsSRjd9tC2x21EdN_2IqWYKRxQ",
+            authDomain: "wementor-app-cfce5.firebaseapp.com",
+            projectId: "wementor-app-cfce5",
+            storageBucket: "wementor-app-cfce5.firebasestorage.app",
+            messagingSenderId: "31838724730",
+            appId: "1:31838724730:web:3184b080194938a11751c3",
+            measurementId: "G-5WRHES5F65"
+        };
         
         let app;
         let auth;
@@ -169,13 +164,6 @@
 
         window.onload = async function() {
             try {
-                // Check for placeholder Firebase configuration values
-                if (firebaseConfig.apiKey === "YOUR_API_KEY" || firebaseConfig.projectId === "YOUR_PROJECT_ID") {
-                    statusMessageElement.textContent = "Error: Please update the firebaseConfig with your own API keys.";
-                    validationMessageElement.textContent = "You must replace the placeholder keys in the code with your own Firebase project configuration to run this app.";
-                    return; // Stop execution
-                }
-
                 // Initialize Firebase services
                 app = initializeApp(firebaseConfig);
                 auth = getAuth(app);
@@ -346,5 +334,3 @@
     </script>
 </body>
 </html>
-
-
