--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!-- Add this Google Sign-In button -->
+<button id="google-sign-in-btn" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 mt-4">
+    Sign In with Google
+</button>
+<button id="sign-out-btn" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-gray-700 bg-gray-200 hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 mt-2 hidden">
+    Sign Out
+</button>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -334,3 +342,4 @@
     </script>
 </body>
 </html>
+
