--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 <body>
 
     <!-- Main Authentication Container (visible before sign-in) -->
-    <div id="auth-container" class="auth-container hidden">
+    <!-- FIX: The 'hidden' class has been removed from this container so it is visible on page load. -->
+    <div id="auth-container" class="auth-container">
         <div class="col-span-full text-center mb-4">
             <h1 class="text-4xl font-extrabold text-gray-800 mb-2">weMentor</h1>
             <p id="auth-status-message" class="text-lg text-gray-700 mb-4">Sign in to get started</p>
@@ -209,7 +210,15 @@
             signInWithCustomToken,
             signInAnonymously
         } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, onSnapshot, collection, query, setLogLevel } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { 
+            getFirestore, 
+            doc, 
+            setDoc, 
+            onSnapshot, 
+            collection, 
+            query,
+            setLogLevel 
+        } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
 
         // Enable debug logging for Firestore
@@ -574,61 +583,68 @@
                 const userDocRef = doc(db, `artifacts/${appId}/users/${userId}/profiles`, userId);
                 const publicDocRef = doc(db, `artifacts/${appId}/public/data/profiles`, userId);
 
-                await setDoc(userDocRef, profileData);
-                await setDoc(publicDocRef, profileData); // Save to public collection for other users to see
+                await setDoc(userDocRef, profileData, { merge: true });
+                await setDoc(publicDocRef, profileData, { merge: true });
 
-                profileValidationMessageElement.textContent = '';
-                statusMessageElement.textContent = "Profile saved successfully!";
-                console.log("Profile saved for user:", userId);
-            } catch (e) {
-                statusMessageElement.textContent = `Error saving profile: ${e.message}`;
-                console.error("Error saving document: ", e);
+                profileValidationMessageElement.textContent = 'Profile saved successfully!';
+            } catch (error) {
+                profileValidationMessageElement.textContent = `Error saving profile: ${error.message}`;
+                console.error("Error saving profile:", error);
             }
         });
 
-        // Function to listen for real-time updates to the mentorship-profiles collection.
+        function createProfileCard(data) {
+            const card = document.createElement('div');
+            card.className = 'profile-card flex flex-col items-center p-4 rounded-lg shadow-md bg-white hover:shadow-lg transition-shadow duration-300';
+            card.innerHTML = `
+                <img src="${data.headshotUrl || 'https://placehold.co/100x100/e2e8f0/64748b?text=User'}" alt="${data.firstName}'s headshot" class="w-24 h-24 rounded-full object-cover border-4 border-indigo-500 shadow-md">
+                <h3 class="mt-4 text-xl font-bold text-gray-800">${data.firstName} ${data.lastName}</h3>
+                <p class="text-sm text-gray-500">${data.role}</p>
+                <div class="mt-2 text-center">
+                    <p class="text-sm text-gray-600 font-semibold">Skills:</p>
+                    <p class="text-xs text-gray-500 italic">${data.skills ? data.skills.join(', ') : 'No skills listed'}</p>
+                </div>
+                <div class="mt-4 w-full text-left bg-gray-50 p-3 rounded-md">
+                    <p class="text-sm font-medium text-gray-700">Description:</p>
+                    <p class="text-xs text-gray-600 mt-1 italic">${data.roleDescription}</p>
+                </div>
+                <div class="mt-4 w-full text-center text-xs text-gray-400">
+                    <p>User ID: ${data.userId}</p>
+                </div>
+            `;
+            return card;
+        }
+
+        // Listener for real-time updates to the public profiles
         function startListeningForProfiles() {
-            // The collection path is now public for sharing
+            // Detach any existing listener first
+            if (unsubscribeFromProfiles) {
+                unsubscribeFromProfiles();
+            }
+
+            // Create a query to listen for changes to the public profiles collection.
             const profilesCollectionRef = collection(db, `artifacts/${appId}/public/data/profiles`);
             const q = query(profilesCollectionRef);
-
+            
+            // Set up the real-time listener
             unsubscribeFromProfiles = onSnapshot(q, (querySnapshot) => {
-                const profiles = [];
-                querySnapshot.forEach((doc) => {
-                    const data = doc.data();
-                    // Don't display the current user's profile in the list of "other users"
-                    if (data.userId !== userId) {
-                        profiles.push(data);
-                    }
-                });
-                
-                usersList.innerHTML = '';
-                if (profiles.length === 0) {
-                    usersList.innerHTML = `<p id="no-users-message" class="text-gray-500 text-center italic">No profiles found yet. Be the first to create one!</p>`;
+                usersList.innerHTML = ''; // Clear the current list
+                if (querySnapshot.empty) {
+                    const noProfilesMessage = document.createElement('p');
+                    noProfilesMessage.id = 'no-users-message';
+                    noProfilesMessage.className = 'text-gray-500 text-center italic';
+                    noProfilesMessage.textContent = 'No profiles found yet. Be the first to create one!';
+                    usersList.appendChild(noProfilesMessage);
                 } else {
-                    profiles.forEach(profile => {
-                        const profileCard = document.createElement('div');
-                        profileCard.className = 'profile-card';
-                        profileCard.innerHTML = `
-                            ${profile.headshotUrl ? `<img src="${profile.headshotUrl}" alt="${profile.firstName}'s headshot" class="w-20 h-20 rounded-full object-cover mb-4">` : ''}
-                            <h3 class="text-xl font-semibold text-gray-800">${profile.firstName} ${profile.lastName}</h3>
-                            <p class="text-md text-indigo-600 font-medium">${profile.role.charAt(0).toUpperCase() + profile.role.slice(1).replace(/_/g, ' ')}</p>
-                            <p class="text-gray-500 text-sm mt-2">${profile.roleDescription}</p>
-                            ${profile.skills && profile.skills.length > 0 ? `<div class="mt-4 flex flex-wrap justify-center gap-2">
-                                ${profile.skills.map(skill => `<span class="bg-gray-200 text-gray-700 text-xs font-medium px-2.5 py-0.5 rounded-full">${skill}</span>`).join('')}
-                            </div>` : ''}
-                            ${profile.videoUrl ? `<div class="mt-4 w-full">
-                                <video controls class="w-full rounded-lg shadow-lg">
-                                    <source src="${profile.videoUrl}" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                            </div>` : ''}
-                        `;
+                    querySnapshot.forEach((doc) => {
+                        const profileData = doc.data();
+                        const profileCard = createProfileCard(profileData);
                         usersList.appendChild(profileCard);
                     });
                 }
             }, (error) => {
-                console.error("Error listening for profiles:", error);
+                console.error("Error getting real-time profiles: ", error);
+                usersList.innerHTML = `<p class="text-red-500 text-center">Error loading profiles: ${error.message}</p>`;
             });
         }
     </script>
